<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <!-- Main content -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".GalleryActivityNg">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/header_text"
            style="@style/Header1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin_small"
            android:layout_marginTop="@dimen/toolbar_title_margin_top"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:text="@string/feed"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toStartOf="@id/drawer_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/drawer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_small"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_drawer"
            app:layout_constraintBottom_toBottomOf="@id/header_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/header_text"
            app:layout_constraintTop_toTopOf="@id/header_text" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="drawer_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/drawer_button" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/lensGrey100"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/default_margin_small"
            android:layout_marginTop="@dimen/default_margin_new"
            android:layout_marginBottom="@dimen/default_margin_new"
            android:text="@string/empty_gallery_title"
            android:textAppearance="@style/Header2"
            app:layout_constraintBottom_toTopOf="@id/desc"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier" />

        <TextView
            android:id="@+id/desc"
            style="@style/Header3.Light"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/default_margin_small"
            android:layout_marginBottom="@dimen/default_margin_new"
            android:text="@string/empty_gallery_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/default_margin_small"
            android:background="@color/lensWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier"
            tools:visibility="gone" />

        <ProgressBar
            android:id="@+id/loader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/lensBlue500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone" />

        <ImageView
            android:id="@+id/gallery_action"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin_new_small"
            android:contentDescription="@string/import_file"
            android:src="@drawable/ic_plus_gallery"
            android:background="@drawable/ic_camera_shadow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- navigation drawer-->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/drawer_nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/lensWhite"
        android:fitsSystemWindows="false"
        android:importantForAccessibility="no"
        android:paddingVertical="@dimen/default_margin_small">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Header1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/navigation_margin"
                android:background="@drawable/divider"
                android:paddingHorizontal="@dimen/default_margin_small"
                android:paddingBottom="@dimen/default_margin_new"
                android:text="@string/nav_drawer_title" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="@dimen/navigation_margin"
                android:background="@color/lensGrey100"
                android:visibility="gone"
                android:importantForAccessibility="no" />

            <Button
                android:id="@+id/logout_button"
                style="@style/Button.Navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin_small"
                android:text="@string/settings_logout"
                app:icon="@drawable/ic_logout" />

        </LinearLayout>

    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>